--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,15 @@ maintainers = [
 ]
 
 dependencies = [
+    "biopython>=1.85",
     "esm>=3.2.0",
+    "hdbscan>=0.8.40",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.3",
+    "numpy>=2.2.6",
     "plotly>=6.1.1",
+    "scikit-learn>=1.6.1",
+    "scipy>=1.15.3",
     "textdistance>=4.6.3",
 ]
 
